# Geolocation-Sample

./: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  GeoLocation_Options.md  PERFORMANCE_OPTIMIZATION.md  README.md  USER_GUIDE.md  wt_config.xml
config/: app_config.sample.json
database/: README.md  schema.sql  scoring_rule.sql  scoring_rules.sql  seed_data.sql
docs/: DATA_DICTIONARY.md  DEMO_WORKFLOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  FRANCHISE_BUYERS_TRANSITION_PLAN.md  FUNCTIONAL_DOC.md  GENERIC_PROSPECTING_PLATFORM.md  GENERIC_TRANSITION_PLAN2.md  GEOLOCATION_OPTIONS.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_PLAN.md  PROPOSAL_DECK.html  PROPOSAL_DECK.md  README.md  RELEASE_NOTES_v2.md  SPRINT_AUTH_PLAN.md  STATEMENT_OF_WORK.md  TRANSITION_TO_MULTIPLE_ENTRYPOINTS.md  UI_GUIDE.md  generate-slides.sh  package.json
resources/css/: style.css
resources/scripts/: leaflet.js
scripts/: setup-resources.sh
src/: AppConfig.h  FranchiseApp.cpp  FranchiseApp.h  main.cpp
src/models/: BusinessInfo.cpp  BusinessInfo.h  DemographicData.h  Franchisee.h  GeoLocation.h  SearchResult.cpp  SearchResult.h
src/services/: AIEngine.cpp  AIEngine.h  AISearchService.cpp  AISearchService.h  ApiLogicServerClient.cpp  ApiLogicServerClient.h  AuditLogger.cpp  AuditLogger.h  AuthService.cpp  AuthService.h  BBBAPI.cpp  BBBAPI.h  DemographicsAPI.cpp  DemographicsAPI.h  GeminiEngine.cpp  GeminiEngine.h  GeocodingService.cpp  GeocodingService.h  GoogleGeocodingAPI.cpp  GoogleGeocodingAPI.h  GoogleMyBusinessAPI.cpp  GoogleMyBusinessAPI.h  GooglePlacesAPI.cpp  GooglePlacesAPI.h  OpenAIEngine.cpp  OpenAIEngine.h  OpenStreetMapAPI.cpp  OpenStreetMapAPI.h  ScoringEngine.cpp  ScoringEngine.h  ThreadPool.cpp  ThreadPool.h
src/widgets/: AuditTrailPage.cpp  AuditTrailPage.h  LoginDialog.cpp  LoginDialog.h  Navigation.cpp  Navigation.h  ResultCard.cpp  ResultCard.h  ResultsDisplay.cpp  ResultsDisplay.h  SearchPanel.cpp  SearchPanel.h  Sidebar.cpp  Sidebar.h  ThreadPoolSettingsWidget.cpp  ThreadPoolSettingsWidget.h
tests/: TestOrchestrator.cpp  TestOrchestrator.h  test_als_client.cpp  test_runner_ui.cpp
